@@ -22,6 +22,8 @@ import java.util.Objects;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
+import com.gentics.mesh.core.rest.schema.ListFieldSchema;
+import com.gentics.mesh.core.rest.schema.impl.ListFieldSchemaImpl;
 import org.apache.commons.io.IOUtils;
 import org.junit.Before;
 import org.junit.Test;
@@ -169,6 +171,45 @@ public class SchemaChangesEndpointTest extends AbstractNodeSearchEndpointTest {
 			assertEquals("The name of the schema was updated", originalSchemaName, schema.getLatestVersion().getName());
 		}
 	}
+
+	private SchemaUpdateRequest buildListFieldUpdateRequest(SchemaResponse schema) {
+		SchemaUpdateRequest req = new SchemaUpdateRequest();
+		req.setName(schema.getName());
+		req.setFields(schema.getFields());
+		return req;
+	}
+
+	@Test
+	public void testListTypeChange() throws Exception {
+		SchemaContainer schemaContainer = schemaContainer("content");
+		String schemaUuid = tx(() -> schemaContainer.getUuid());
+		SchemaResponse schema = call(() -> client().findSchemaByUuid(schemaUuid));
+
+		ListFieldSchema listField = new ListFieldSchemaImpl();
+		listField.setListType("string");
+		listField.setName("testListType");
+		listField.setLabel("testListTypeLabel");
+		schema.getFields().add(listField);
+		// Update schema and wait for migration
+		waitForJobs(() -> call(() ->
+				client().updateSchema(schemaUuid, this.buildListFieldUpdateRequest(schema))), COMPLETED, 1);
+
+		SchemaResponse updated = call(() -> client().findSchemaByUuid(schemaUuid));
+		assertNotNull("The new field should have been added to the schema.", updated.getField("testListType"));
+		listField = (ListFieldSchema) updated.getField("testListType");
+		assertEquals("The list type should be string.", "string", listField.getListType());
+		listField.setListType("micronode");
+		// Update schema and wait for migration
+		waitForJobs(() -> call(() ->
+				client().updateSchema(schemaUuid, this.buildListFieldUpdateRequest(updated))), COMPLETED, 1);
+
+
+		SchemaResponse changed = call(() -> client().findSchemaByUuid(schemaUuid));
+		assertNotNull("The new field should still be in the schema.", changed.getField("testListType"));
+		listField = (ListFieldSchema) changed.getField("testListType");
+		assertEquals("The list type should have changed to micronode.", "micronode", listField.getListType());
+	}
+
 
 	@Test
 	public void testFieldTypeChange() throws Exception {
